--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,3 @@
-# .github/workflows/test.yml
 name: Run Container and Execute Tests
 
 on:
@@ -13,8 +12,9 @@ jobs:
   test-in-container:
     runs-on: self-hosted
     container:
-      image: localhost:5000/flagscale:cuda-12.4.1-python-3.12-torch-2.5.1-commit-e05f659
+      image:  localhost:5000/flagscale:cuda-12.4.1-python-3.12-torch-2.5.1-commit-e05f659
       options: --gpus all --privileged --ipc=host --ulimit memlock=-1 --ulimit stack=67108864
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -32,6 +32,26 @@ jobs:
           submodules: false
           set-safe-directory: true
 
+      - name: Set up Python and Install Dependencies
+        run: |
+          apt update -y
+          apt-get install -y python3 python3-pip python3-venv git
+          python3 -m venv venv
+          . venv/bin/activate
+          cd /__w/FlagCX/FlagCX
+          git config --global --add safe.directory /__w/FlagCX/FlagCX
+          pip install pre-commit
+          pre-commit install
+
+      - name: Run Code Format Check with pre-commit
+        run: |
+          cd /__w/FlagCX/FlagCX
+          . venv/bin/activate
+          apt update -y
+          apt-get install clang-format -y 
+          pre-commit run --from-ref origin/main  --to-ref HEAD
+        continue-on-error: false
+
       - name: Check the current working directory
         run: |
           echo "Current directory: $(pwd)"
@@ -44,5 +64,4 @@ jobs:
         run: |
           cd /__w/FlagCX/FlagCX
           ./test/script/auto_script.sh
-
 
