--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "external/googletest"]
-	path = external/googletest
+[submodule "third-party/googletest"]
+	path = third-party/googletest
 	url = https://github.com/google/googletest.git
